recycler view et Todo parcellable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
     <string name="add_todo">add todo</string>
+    <string name="nom">nom</string>
+    <string name="urgence">urgence</string>
 </resources>
